# DSA-assistant

./: .dockerignore  .gitignore  Dockerfile  README.md  render.yaml
backend/: .env.example  pyproject.toml
backend/app/: cache.py  config.py  main.py  models.py
backend/app/routes/: assist.py  daily.py  hint.py  solve.py
backend/app/services/: assistant.py  editorial.py  hint.py  leetcode.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/editorial/[slug]/: page.tsx
frontend/src/components/: CodeAssistantPane.tsx  CodeBlock.tsx  CodeTabs.tsx  EditorialPane.tsx  HintPanel.tsx  LoadingSkeleton.tsx  Markdown.tsx  PatternPills.tsx  ProblemPane.tsx  ProblemTable.tsx  SearchBar.tsx  ThemeToggle.tsx
frontend/src/lib/: api.ts  blind75.ts  neetcode150.ts  notes.ts  topicColors.ts  utils.ts
frontend/src/types/: index.ts
